--- a/projects/midgard/package.json
+++ b/projects/midgard/package.json
@@ -1,8 +1,13 @@
 {
   "name": "midgard",
   "version": "0.0.1",
+  "description": "Humanitec angular core module",
+  "author": "Humanitec",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+  },
+  "dependencies": {
+    "midgard-core": "0.0.4"
   }
 }
