--- a/projects/midgard/package.json
+++ b/projects/midgard/package.json
@@ -8,6 +8,7 @@
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
   },
   "dependencies": {
-    "midgard-core": "0.0.4"
+    "midgard-core": "0.0.4",
+    "rxjs": "^6.3.2"
   }
 }
