feat: add http module and connect it to the core

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,22 @@
       "dom"
     ],
     "paths": {
-      "@libs/*": ["projects/*"],
+      "@libs/*": [
+        "projects/*"
+      ],
       "midgard": [
         "dist/midgard"
       ],
       "midgard/*": [
         "dist/midgard/*"
+      ],
+      "contacts": [
+        "dist/contacts",
+        "dist/contacts"
+      ],
+      "contacts/*": [
+        "dist/contacts/*",
+        "dist/contacts/*"
       ]
     }
   }
