feat: working redux middleware and devtools

--- a/projects/midgard/package.json
+++ b/projects/midgard/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "midgard-core": "0.0.16",
+    "redux-observable": "^1.0.0",
     "rxjs": "^6.3.2"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.5"
   }
 }
