--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "init": "gulp modules:init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./"
   },
   "private": true,
   "dependencies": {
