--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "init": "gulp modules:init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./"
+    "init": "gulp modules:init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./",
+    "schematics": "gulp schematics --gulpfile node_modules/midgard-schematics/lib/gulpfile.js",
+    "import-modules": "npm run init && npm run schematics"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/animations": "^6.1.8",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
@@ -28,10 +30,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/build-ng-packagr": "~0.7.0",
-    "@angular-devkit/schematics": "^0.8.2",
+    "@angular-devkit/schematics": "^0.8.3",
     "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/language-service": "^6.1.8",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -43,11 +45,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "midgard-schematics": "^0.1.7",
+    "midgard-schematics": "^0.1.32",
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
-    "tsickle": ">=0.29.0",
+    "tsickle": "^0.33.0",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
