--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "apollo-link": "^1.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
@@ -58,6 +59,6 @@
     "tsickle": "^0.33.0",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.8.0"
   }
 }
