--- a/package.json
+++ b/package.json
@@ -14,33 +14,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.8",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/core": "^6.1.8",
-    "@angular/forms": "^6.1.8",
-    "@angular/http": "^6.1.8",
-    "@angular/platform-browser": "^6.1.8",
-    "@angular/platform-browser-dynamic": "^6.1.8",
-    "@angular/router": "^6.1.8",
-    "apollo-angular": "^1.2.0",
-    "apollo-angular-link-http": "^1.2.0",
-    "apollo-cache-inmemory": "^1.2.9",
-    "apollo-client": "^2.4.1",
-    "core-js": "^2.5.7",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26",
-    "apollo-link": "^1.2.0"
+    "@angular/animations": "^6.1.9",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/router": "^6.1.9",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/build-ng-packagr": "~0.7.0",
     "@angular-devkit/schematics": "^0.8.3",
     "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.8",
-    "@angular/language-service": "^6.1.8",
+    "@angular/compiler-cli": "^6.1.9",
+    "@angular/language-service": "^6.1.9",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
