chore: Added second dummy module to config.json

--- a/config.json
+++ b/config.json
@@ -4,6 +4,11 @@
       "name": "contacts",
       "url": "git@github.com:Humanitec/midgard-contacts.git",
       "commitId": "123sad12"
+    },
+    {
+      "name": "projects",
+      "url": "git@github.com:Humanitec/midgard-contacts.git",
+      "commitId": "234ba5f0"
     }
   ]
 }
