--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
       "commitId": "123sad12"
     },
     {
-      "name": "projects",
-      "url": "git@github.com:Humanitec/midgard-contacts.git",
+      "name": "products",
+      "url": "git@github.com:Humanitec/midgard-products.git",
       "commitId": "234ba5f0"
     }
   ]
