--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/build-ng-packagr": "~0.7.0",
-    "@angular-devkit/schematics": "^0.8.3",
+    "@angular-devkit/schematics": "^0.8.4",
     "@angular/cli": "~6.1.5",
     "@angular/compiler-cli": "^6.1.9",
     "@angular/language-service": "^6.1.9",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -41,7 +41,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "midgard-schematics": "^0.1.53",
+    "midgard-schematics": "^0.1.75",
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
