--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.scss"
             ],
             "scripts": []
@@ -72,6 +75,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "scripts": [],
@@ -194,120 +200,6 @@
             "tsConfig": [
               "projects/freyja/tsconfig.lib.json",
               "projects/freyja/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "contacts": {
-      "root": "projects/contacts",
-      "projectType": "library",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "project": "projects/contacts/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/contacts/ng-package.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/contacts/src/test.ts",
-            "tsConfig": "projects/contacts/tsconfig.spec.json",
-            "karmaConfig": "projects/contacts/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/contacts/tsconfig.lint.json",
-              "projects/contacts/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "products": {
-      "root": "projects/products",
-      "projectType": "library",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "project": "projects/products/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/products/ng-package.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/products/src/test.ts",
-            "tsConfig": "projects/products/tsconfig.spec.json",
-            "karmaConfig": "projects/products/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/products/tsconfig.lint.json",
-              "projects/products/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "styleguide": {
-      "root": "projects/styleguide",
-      "sourceRoot": "projects/styleguide/src",
-      "projectType": "library",
-      "prefix": "lib",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "tsConfig": "projects/styleguide/tsconfig.lib.json",
-            "project": "projects/styleguide/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/styleguide/ng-package.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/styleguide/src/test.ts",
-            "tsConfig": "projects/styleguide/tsconfig.spec.json",
-            "karmaConfig": "projects/styleguide/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/styleguide/tsconfig.lib.json",
-              "projects/styleguide/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
