--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.10",
     "@angular/core": "^6.1.10",
@@ -23,8 +24,7 @@
     "@angular/platform-browser": "^6.1.10",
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
-    "zone.js": "~0.8.26",
-    "@angular/cdk": "^6.2.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
