--- a/.drone.yml
+++ b/.drone.yml
@@ -6,12 +6,22 @@ pipeline:
     secrets: [NPM_USERNAME, NPM_PASSWORD, NPM_EMAIL]
     registry: https://npm.fury.io/humanitec/
 
+  install:
+    image: node:9.9.0
+    commands:
+      - npm install
+      - npm run init
+    when:
+      event: [push, tag]
+      status: [success]
+
   build:
     image: node:9.9.0
     commands:
       - npm run build --prod
     when:
       event: [push, tag]
+      status: [success]
 
   build-docker-image:
     image: plugins/docker
