Debug Drone pipeline

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,8 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
+      - cat .npmrc
+      - npm whoami
       - npm install
       - npm run init
     when:
