Debug Drone pipeline - attempt login

--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ pipeline:
     commands:
       - cat .npmrc
       - npm whoami
+      - npm adduser
       - npm install
       - npm run init
     when:
