--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
   prepare_npm_auth:
     image: node:9.9.0
     commands:
-      - npm cache clean
+      - npm cache verify
       - npm install npm-login-cmd --no-save
 
   npm_auth:
