Drone CI - store secrets in environment variables

--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,15 @@ pipeline:
     image: node:9.9.0
     commands:
       - npm install npm-login-cmd --no-save
+    environment:
+      NPM_USER:
+        from_secret: npm_user
+      NPM_PASS:
+        from_secret: npm_pass
+      NPM_EMAIL:
+        from_secret: npm_email
+    when:
+      event: [push, tag]
 
   npm_auth:
     image: node:9.9.0
