--- a/.drone.yml
+++ b/.drone.yml
@@ -5,10 +5,14 @@ pipeline:
     image: node:9.9.0
     commands:
       - npm install npm-login-cmd --no-save
+    secrets: [NPM_USER, NPM_PASS, NPM_EMAIL]
     environment:
-      NPM_USER: [npm_user]
-      NPM_PASS: [npm_pass]
-      NPM_EMAIL: [npm_email]
+      NPM_USER:
+        from_secret: NPM_USER
+      NPM_PASS:
+        from_secret: NPM_PASS
+      NPM_EMAIL:
+        from_secret: NPM_EMAIL
     when:
       event: [push, tag]
 
