--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
+      - npm whoami
       - npm install
       - npm run init
     when:
