--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ pipeline:
       - npm config set registry https://npm-proxy.fury.io/$${NPM_USER}/
       - npm config set always-auth
       - npx npm-login-cmd
-      - cat .npmrc
+      - npm config list
       - npm install
       - npm run init
     secrets: [NPM_USER, NPM_PASS, NPM_EMAIL]
