--- a/.drone.yml
+++ b/.drone.yml
@@ -5,13 +5,13 @@ pipeline:
     image: node:9.9.0
     commands:
       - npm install npm-login-cmd --no-save
-      - npm config set registry https://npm-proxy.fury.io/$${NPM_USER}/
+      - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/$${NPM_USER}/
       - npm config set always-auth
       - npx npm-login-cmd
       - npm config list
-      - npm install --registry https://npm-proxy.fury.io/$${NPM_USER}/
+      - npm install
       - npm run init
-    secrets: [NPM_USER, NPM_PASS, NPM_EMAIL]
+    secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN]
     when:
       event: [push, tag]
 
