--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,8 @@ pipeline:
       - npm install npm-login-cmd --no-save
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/$${NPM_USER}/
       - npm config set always-auth
-      - npm config set ca //npm-proxy.fury.io/$${NPM_TOKEN}/$${NPM_USER}/:_authToken=$${NPM_TOKEN}
+      - echo "ca=" >> /root/.npmrc
+      - echo "//npm-proxy.fury.io/$${NPM_TOKEN}/$${NPM_USER}/:_authToken=$${NPM_TOKEN}" >> /root/.npmrc
       - npx npm-login-cmd
       - npm config list
       - ls /root/.npmrc
