--- a/.drone.yml
+++ b/.drone.yml
@@ -4,12 +4,11 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
-      - npm install npm-login-cmd --no-save
+      - npm install npm-login-cmd -g
+      - npm install gulp-cli -g
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
       - npm config set always-auth
       - npx npm-login-cmd
-      - npm config list
-      - cat /root/.npmrc
       - npm install
       - npm run init
     secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN]
