--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,7 @@ pipeline:
       - npm config set always-auth
       - npx npm-login-cmd
       - npm install
+      - npm ls gulp-cli
       - npm run init
     secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN]
     when:
