--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,7 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
+      - ssh-add <(echo "$SSH_KEY") 
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
@@ -12,7 +13,7 @@ pipeline:
       - npm install
       - npm ls gulp-cli
       - npm run init
-    secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN]
+    secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN, SSH_KEY]
     when:
       event: [push, tag]
 
