--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
-      - ssh-agent -s
+      - eval "$(ssh-agent -s)"
       - echo $${SSH_KEY} | xargs ssh-add
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
