--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ pipeline:
     image: node:9.9.0
     commands:
       - eval "$(ssh-agent -s)"
-      - echo $${SSH_KEY} | xargs ssh-add
+      - echo $${SSH_KEY} >> /root/.ssh/id_rsa
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
