--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,10 @@ pipeline:
     image: node:9.9.0
     commands:
       - eval "$(ssh-agent -s)"
-      - mkdir -p /root/.ssh && echo $${SSH_KEY} >> /root/.ssh/id_rsa && ssh-add
+      - mkdir -p /root/.ssh
+      - echo $${SSH_KEY} >> /root/.ssh/id_rsa
+      - chmod 600 /root/.ssh/id_rsa
+      - ssh-add
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
