--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ pipeline:
       - mkdir -p /root/.ssh
       - echo $${SSH_KEY} >> /root/.ssh/id_rsa
       - chmod 600 /root/.ssh/id_rsa
-      - ssh-add
+      - ssh-add /root/.ssh/id_rsa
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
