--- a/.drone.yml
+++ b/.drone.yml
@@ -6,8 +6,9 @@ pipeline:
     commands:
       - eval "$(ssh-agent -s)"
       - mkdir -p /root/.ssh
-      - echo $${SSH_KEY} >> /root/.ssh/id_rsa
-      - chmod 600 /root/.ssh/id_rsa
+      - echo $${SSH_KEY} > /root/.ssh/id_rsa
+      - echo $${SSH_PUBLIC_KEY} > /root/.ssh/id_rsa.pub
+      - chmod 600 /root/.ssh/id_rsa*
       - ssh-add /root/.ssh/id_rsa
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
@@ -15,7 +16,6 @@ pipeline:
       - npm config set always-auth
       - npx npm-login-cmd
       - npm install
-      - npm ls gulp-cli
       - npm run init
     secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN, SSH_KEY]
     when:
