--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,8 @@ pipeline:
       - mkdir -p /root/.ssh
       - echo $${SSH_KEY} > /root/.ssh/id_rsa
       - echo $${SSH_PUBLIC_KEY} > /root/.ssh/id_rsa.pub
+      - cat /root/.ssh/id_rsa.pub
+      - cat /root/.ssh/id_rsa
       - chmod 600 /root/.ssh/id_rsa*
       - ssh-add /root/.ssh/id_rsa
       - npm install npm-login-cmd -g
