--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,8 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
+      - apt-get update
+      - apt-get upgrade
       - eval "$(ssh-agent -s)"
       - mkdir -p /root/.ssh
       - echo $${SSH_KEY} > /root/.ssh/id_rsa
