--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ pipeline:
     image: node:9.9.0
     commands:
       - apt-get update
-      - apt-get upgrade
+      - apt-get upgrade -y
       - eval "$(ssh-agent -s)"
       - mkdir -p /root/.ssh
       - echo $${SSH_KEY} > /root/.ssh/id_rsa
