Fix path to ssh key in Docker container ssh-keygen call

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ pipeline:
       - echo $${SSH_PUBLIC_KEY} > /root/.ssh/id_rsa.pub
       - ssh-keyscan -t rsa github.com >> /root/.ssh/known_hosts
       - chmod 600 /root/.ssh/id_rsa*
-      - ssh-keygen -p -P "" -N "" -f ~/.ssh/id_rsa
+      - ssh-keygen -p -P "" -N "" -f /root/.ssh/id_rsa
       - ssh-add -k /root/.ssh/id_rsa
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
