--- a/.drone.yml
+++ b/.drone.yml
@@ -11,13 +11,14 @@ pipeline:
       - chmod 600 /root/.ssh/id_rsa*
       - echo "Host github.com" >> /root/.ssh/config
       - echo "  IdentityFile ~/.ssh/id_rsa" >> /root/.ssh/config
-      - npm install npm-login-cmd -g
-      - npm install gulp-cli -g
-      - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
-      - npm config set always-auth
-      - npx npm-login-cmd
-      - npm install
-      - npm run init
+      - ssh -vvv git@github.com
+      # - npm install npm-login-cmd -g
+      # - npm install gulp-cli -g
+      # - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
+      # - npm config set always-auth
+      # - npx npm-login-cmd
+      # - npm install
+      # - npm run init
     secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN, SSH_KEY, SSH_PUBLIC_KEY]
     when:
       event: [push, tag]
