--- a/.drone.yml
+++ b/.drone.yml
@@ -4,24 +4,21 @@ pipeline:
   install:
     image: node:9.9.0
     commands:
+      - eval "$(ssh-agent -s)"
       - mkdir -p /root/.ssh
       - echo $${SSH_KEY} > /root/.ssh/id_rsa
       - echo $${SSH_PUBLIC_KEY} > /root/.ssh/id_rsa.pub
       - ssh-keyscan -t rsa github.com >> /root/.ssh/known_hosts
       - chmod 600 /root/.ssh/id_rsa*
-      - echo "BatchMode yes" >> /root/.ssh/config
-      - echo "Host github.com" >> /root/.ssh/config
-      - echo "  IdentityFile ~/.ssh/id_rsa" >> /root/.ssh/config
-      - cat /root/.ssh/id_rsa
-      - cat /root/.ssh/id_rsa.pub
+      - ssh-add -k /root/.ssh/id_rsa
       - ssh -vvv git@github.com
-      # - npm install npm-login-cmd -g
-      # - npm install gulp-cli -g
-      # - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
-      # - npm config set always-auth
-      # - npx npm-login-cmd
-      # - npm install
-      # - npm run init
+      - npm install npm-login-cmd -g
+      - npm install gulp-cli -g
+      - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
+      - npm config set always-auth
+      - npx npm-login-cmd
+      - npm install
+      - npm run init
     secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN, SSH_KEY, SSH_PUBLIC_KEY]
     when:
       event: [push, tag]
