--- a/.drone.yml
+++ b/.drone.yml
@@ -6,14 +6,14 @@ pipeline:
     commands:
       - eval "$(ssh-agent -s)"
       - mkdir -p /root/.ssh
-      - echo $${SSH_KEY}\n > /root/.ssh/id_rsa
-      - echo $${SSH_PUBLIC_KEY}\n > /root/.ssh/id_rsa.pub
+      - echo "$${SSH_KEY}\n" > /root/.ssh/id_rsa
+      - echo "$${SSH_PUBLIC_KEY}\n" > /root/.ssh/id_rsa.pub
+      - cat /root/.ssh/id_rsa
+      - cat /root/.ssh/id_rsa.pub
       - ssh-keyscan -t rsa github.com >> /root/.ssh/known_hosts
       - chmod 600 /root/.ssh/id_rsa*
       - ssh-add -k /root/.ssh/id_rsa
       - ssh -vvv git@github.com
-      - cat /root/.ssh/id_rsa
-      - cat /root/.ssh/id_rsa.pub
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
       - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
