add products to tsconfig file and change config.json

--- a/config.json
+++ b/config.json
@@ -5,8 +5,12 @@
       "url": "git@github.com:Humanitec/midgard-contacts.git",
       "commitId": "123sad12",
       "config": {
-        "parentComponentPath": "",
-        "entryComponent": ""
+        "parentExitPointComponent": {
+          "name": "",
+          "path": "",
+          "selector": ""
+        },
+        "entryPointComponent": ""
       }
     },
     {
