--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -12,6 +12,7 @@
   "include": [
     "**/*",
     "../projects/midgard-angular/src/lib/midgard.module.ts",
-    "../projects/documents/src/lib/documents.module.ts"
+    "../projects/documents/src/lib/documents.module.ts",
+    "../projects/products/src/lib/products.module.ts"
   ]
 }
