--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "coverage-midgard": "ng test midgard-angular --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
