--- a/.drone.yml
+++ b/.drone.yml
@@ -30,13 +30,13 @@ pipeline:
       event: [push, tag]
       status: [success]
 
-  test:
-    image: node:9.9.0
-    commands:
-      - npm run test-headless
-    when:
-      event: [push, tag]
-      status: [success]
+  # test:
+  #   image: node:9.9.0
+  #   commands:
+  #     - npm run test-headless
+  #   when:
+  #     event: [push, tag]
+  #     status: [success]
 
   build-docker-image:
     image: plugins/docker
