--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "walhall-sample-angular-app": {
+    "midgard-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/walhall-sample-angular-app",
+            "outputPath": "dist/midgard-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -53,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "walhall-sample-angular-app:build"
+            "browserTarget": "midgard-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "walhall-sample-angular-app:build:production"
+              "browserTarget": "midgard-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "walhall-sample-angular-app:build"
+            "browserTarget": "midgard-app:build"
           }
         },
         "test": {
@@ -101,7 +101,7 @@
         }
       }
     },
-    "walhall-sample-angular-app-e2e": {
+    "midgard-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -109,11 +109,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "walhall-sample-angular-app:serve"
+            "devServerTarget": "midgard-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "walhall-sample-angular-app:serve:production"
+              "devServerTarget": "midgard-app:serve:production"
             }
           }
         },
@@ -167,81 +167,7 @@
           }
         }
       }
-    },
-    "documents": {
-      "root": "projects/documents",
-      "projectType": "library",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "project": "projects/documents/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/documents/ng-package.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/documents/src/test.ts",
-            "tsConfig": "projects/documents/tsconfig.spec.json",
-            "karmaConfig": "projects/documents/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/documents/tsconfig.lint.json",
-              "projects/documents/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "products": {
-      "root": "projects/products",
-      "projectType": "library",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
-          "options": {
-            "project": "projects/products/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/products/ng-package.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/products/src/test.ts",
-            "tsConfig": "projects/products/tsconfig.spec.json",
-            "karmaConfig": "projects/products/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/products/tsconfig.lint.json",
-              "projects/products/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
     }
   },
-  "defaultProject": "walhall-sample-angular-app"
+  "defaultProject": "midgard-app"
 }
