--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,7 @@ pipeline:
   build:
     image: node:9.9.0
     commands:
-      - npm run build --prod
+      - npm run build -- --prod
     when:
       event: [push, tag]
       status: [success]
