--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -11,6 +11,8 @@
   ],
   "include": [
     "**/*",
-    "../projects/midgard-angular/src/lib/midgard.module.ts"
+    "../projects/midgard-angular/src/lib/midgard.module.ts",
+    "../projects/documents/src/lib/documents.module.ts",
+    "../projects/products/src/lib/products.module.ts"
   ]
 }
