modify karma.conf to use headless browser

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test walhall-sample-angular-app --browsers=Chrome --singleRun=false --autoWatch=true",
-    "test-headless": "ng test",
+    "test": "ng test",
+    "test-ci": "ng test --single-run",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "init": "gulp init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./",
