--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ pipeline:
       status: [success]
 
   test:
-    image: registry.tola.io/humanitec/docker-nodejs-and-chrome:0.0.1-9.9.0-latest
+    image: node:9.9.0
     commands:
       - npm run test-ci
     when:
