--- a/.drone.yml
+++ b/.drone.yml
@@ -33,7 +33,7 @@ pipeline:
   test:
     image: node:9.9.0
     commands:
-      - npm run test-ci
+      - npm run test
     when:
       event: [push, tag]
       status: [success]
