--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ pipeline:
       status: [success]
 
   test:
-    image: registry.tola.io/humanitec/docker-nodejs-and-chrome:0.0.1
+    image: registry.tola.io/humanitec/docker-nodejs-and-chrome:0.0.1-${NODE_VERSION}-latest
     commands:
       - npm run test
     when:
