--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "~6.1.5",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
+    "@compodoc/compodoc": "^1.1.7",
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
