--- a/app-state.json
+++ b/app-state.json
@@ -1,1 +1,1 @@
-{"app":{"initCommitId":"a9f0715c5ec2dca848a2f5838b37ed53e7c0cabf\n"},"midgard-angular":{"initCommitId":"81505e29e2846704840ac7f78daf05d9b6c4f10c\n"}}
+{"app":{"initCommitId":"253c4426ba25d603d39fecaea6ffe4615585ede3"},"midgard-angular":{"initCommitId":"7b8ab27e980f4f60e0afc1d2e3a6251ec51d3b56"}}
