--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
       ],
       "styleguide/*": [
         "dist/styleguide/*"
+      ],
+      "products": [
+        "dist/products"
       ]
     }
   }
